--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -3,11 +3,11 @@
   become: true
   connection : ssh
   tasks : 
-  - name: updating apt
-    command : sudo apt-get update
+  - name: updating the new instance
+    command : sudo yum update
 
   - name : Install Docker
-    command : sudo apt-get install -y docker.io
+    command : sudo yum install docker -y
     become : yes
     become_user : root
 
