--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -12,7 +12,7 @@
     become_user : root
 
   - name : Start Docker Service
-    command : sudo systemctl start docker
+    command : sudo systemctl restart docker
     become : yes
     become_user : root
 
